fixes spacing mistake made in last commit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,6 @@ main > section {
 
 .border {
   padding: 12px 0;
-  margin-top: 16px;
 }
 
 .section-header {
